# SurviveTheSemester

./: .gitignore  CMakeLists.txt  Doxyfile  GAME_RULES.md  ProjectPlan.docx  README.md  TODO.md  bagel.h
.cursor/rules/: survive-review-checklist.mdc
docs/html/: _components_8h.html  _components_8h.js  _components_8h_source.html  _config_8h.html  _config_8h.js  _config_8h_source.html  _entity_factory_8cpp.html  _entity_factory_8cpp.js  _entity_factory_8h.html  _entity_factory_8h.js  _entity_factory_8h_source.html  _enums_8h.html  _enums_8h.js  _enums_8h_source.html  _events_8h.html  _events_8h.js  _events_8h_source.html  _game_8cpp.html  _game_8cpp.js  _game_8h.html  _game_8h.js  _game_8h_source.html  _game_restart_8cpp.html  _game_restart_8cpp.js  _game_state_access_8cpp.html  _game_state_access_8cpp.js  _input_8h.html  _input_8h.js  _input_8h_source.html  _physics_8cpp.html  _physics_8cpp.js  _physics_8h.html  _physics_8h.js  _physics_8h_source.html  _r_e_a_d_m_e_8md.html  _sprites_8cpp.html  _sprites_8cpp.js  _sprites_8h.html  _sprites_8h.js  _sprites_8h_source.html  (+216 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  (+81 more)
src/: Components.h  Config.h  EntityFactory.cpp  EntityFactory.h  Enums.h  Events.h  Game.cpp  Game.h  GameRestart.cpp  GameStateAccess.cpp  Input.h  Physics.cpp  Physics.h  Sprites.cpp  Sprites.h  main.cpp
src/systems/: ball_paddle.cpp  brick_progress.cpp  cleanup.cpp  drops.cpp  endgame.cpp  exam.cpp  graduation.cpp  hazards.cpp  hud.cpp  input.cpp  progress.cpp  render.cpp  systems.h  year.cpp
tests/: test_brick_prereqs.cpp  test_graduation_year.cpp  test_play_again_reset.cpp  test_year_announce.cpp
