cmake_minimum_required(VERSION 3.28)
project(SurviveTheSemester)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (NOT MSVC)
    set(CMAKE_CXX_FLAGS "-Wall -Wextra")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
endif ()

add_executable(SurviveTheSemester
        bagel.h
)

set(SDL_STATIC ON)
set(SDL_SHARED OFF)
add_subdirectory(lib/SDL)
target_link_libraries(SurviveTheSemester PUBLIC SDL3-static)

set(BUILD_SHARED_LIBS OFF)
# Only PNG/JPG (built-in STB backend) are needed. Disable formats whose
# vendored decoders live in external/ submodules that weren't copied in.
set(SDLIMAGE_AVIF OFF)
set(SDLIMAGE_JXL OFF)
set(SDLIMAGE_TIF OFF)
set(SDLIMAGE_WEBP OFF)
add_subdirectory(lib/SDL_image)
target_link_libraries(SurviveTheSemester PUBLIC SDL3_image-static)

set(BOX2D_SAMPLES OFF)
set(BOX2D_BENCHMARKS OFF)
set(BOX2D_DOCS OFF)
set(BOX2D_PROFILE OFF)
set(BOX2D_VALIDATE OFF)
set(BOX2D_UNIT_TESTS OFF)
add_subdirectory(lib/box2d)
target_link_libraries(SurviveTheSemester PUBLIC box2d)

add_custom_command(TARGET SurviveTheSemester POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
        "${PROJECT_SOURCE_DIR}/res"
        "$<TARGET_FILE_DIR:SurviveTheSemester>/res")
